visualization scrollbar issue and close issue when click on close

--- a/src/main/webapp/app/modules/canvas/visualization/visualization-modal/visualization-edit-modal/visualization-edit-modal.scss
+++ b/src/main/webapp/app/modules/canvas/visualization/visualization-modal/visualization-edit-modal/visualization-edit-modal.scss
@@ -33,7 +33,7 @@
   background-color: var(--spectrum-global-color-gray-800);
 }
 ._spectrum-Dialog-content_30293 {
-  overflow: hidden;
+  overflow: auto;
 }
 .date-range-picker-tab {
   width: auto !important;
